--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,6 +8,12 @@
   line-height: 16px;
 }
 
+@media screen and (max-width: 689px) {
+  .footer__copyright {
+    line-height: 30px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .footer__copyright {
     line-height: 14px;
