--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,6 +18,21 @@
   }
 }
 
+@media screen and (max-width: 689px) {
+  .footer {
+    max-width: 679px;
+    flex-direction: column;
+    align-items: center;
+    margin: 85px 48px 24px;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .footer {
+    max-width: 380px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .footer {
     max-width: 186px;
